chapter_05/kubia-service-headless.yaml
# kubectl create -f ./chapter_05/kubia-service-headless.yaml

apiVersion: v1
kind: Service
metadata:
  name: kubia-headless
spec:
  # This makes the service headless
  clusterIP: None
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: kubia
